coupons backend table overflow fixed

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -6181,6 +6181,10 @@ body.user-registration {
 						margin-top: 20px;
 						margin-bottom: 20px;
 
+						&.fixed {
+							table-layout: unset;
+						}
+
 						thead {
 							tr {
 								th {
